<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/caja_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/caja_1"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/caja_ubi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/caja_2"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/caja_exp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/caja_3"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/caja_foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/caja_4"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_4"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/snackbar_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:hint="@string/snackber"
        android:layout_marginTop="200dp"/>
</LinearLayout>