<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:id="@+id/Tile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/bnt_1" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_2" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_3" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="50dp"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/per"
                />

        </androidx.cardview.widget.CardView>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"/>

    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:layout_margin="10dp"
        />
        </RelativeLayout>
    </LinearLayout>
  <EditText
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:layout_margin="10dp"
      android:hint="@string/caja_2"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:hint="@string/caja_3"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_edit"
        android:layout_marginRight="150dp"
        android:layout_marginLeft="150dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        android:layout_marginRight="150dp"
        android:layout_marginLeft="150dp"/>

</LinearLayout>