<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/caja_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/caja_1"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/caja_ubi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/caja_2"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/caja_exp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/caja_3"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_launcher_background"
            android:scaleType="centerCrop"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_gellery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Get Picture!" />

    <Button
        android:id="@+id/btn_Update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_4"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        android:textColor="@color/white" />

</LinearLayout>